# ratio-solar-charge-planner

./: .gitignore  LICENSE  README.md  apps.yaml.example  config.example.yaml  hacs.json  pyproject.toml  requirements.txt
appdaemon/: apps.yaml.example
appdaemon/apps/charger/: charger_app.py  optimizer.py
appdaemon/apps/laadplanner/: __init__.py  laadplanner_app.py  optimizer.py  solar_forecast.py  tariff.py
apps/charger/: charger_app.py  optimizer.py  solar_forecast.py  tariff.py
docs/: architectuur.md
homeassistant/: dashboard.yaml
homeassistant/input_helpers/: laadplanner.yaml
scripts/: config_loader.py  laadplanner.py  optimizer.py  solar_forecast.py  solar_forecast_plot.py  tibber_analyse.py
tests/: conftest.py  test_charger_app.py  test_laadplanner_app.py  test_optimizer.py  test_tariff.py
www/: charge-plan.html  laadplan.html  preview.html
