[project]
name = "thuisenergie"
version = "0.1.0"
description = "Thuisenergiemanagementsysteem — zonnepredictie, laadplanner, Tibber-analyse"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["appdaemon>=4.4.0"]
