[project]
name = "ratio-solar-charge-planner"
version = "0.1.0"
description = "Smart EV charging with Ratio Solar — solar forecast, charge optimizer, AppDaemon integration"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = ["appdaemon>=4.4.0", "pytest>=8.0", "pytest-mock>=3.12"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pylint.design]
# AppDaemon listen_state callbacks have a fixed signature: entity, attribute, old, new, kwargs
# — that is 5 positional args + self, so the project-wide max is raised to 6.
max-args = 6
max-positional-arguments = 6

[tool.pylint."messages control"]
disable = [
    "W0613",  # unused-argument: AppDaemon callback signatures are fixed by the framework
]
